--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/mdx": "^2.0.5",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
+    "gray-matter": "^4.0.3",
     "next": "13.4.2",
     "postcss": "8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
+    "reading-time": "^1.5.0",
+    "rehype-sanitize": "^5.0.1",
+    "rehype-stringify": "^9.0.3",
+    "tailwind-gradient-mask-image": "^1.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
