--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "gray-matter": "^4.0.3",
     "next": "13.4.2",
